<resources>
    <string name="app_name">BureaucratMe</string>
    <string name="id">מספר זהות</string>
    <string name="save">save</string>
    <string name="family_name">family name</string>
    <string name="praivte_name">praivte name</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="personal_details">Personal Details</string>
    <string name="id1">ID</string>

    <string-array name="dbTags">
        <item>Birth Date</item>
        <item>City</item>
        <item>Email</item>
        <item>First Name</item>
        <item>Last Name</item>
        <item>ID</item>
        <item>Phone Number:</item>
        <item>Street</item>
        <item>Zip</item>
    </string-array>

</resources>
